--- a/.github/workflows/build-epub.yml
+++ b/.github/workflows/build-epub.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Set up Docker Compose
         uses: docker/setup-buildx-action@v3
@@ -25,16 +25,8 @@ jobs:
       - name: Upload first EPUB artifact
         uses: actions/upload-artifact@v4
         with:
-          name: epub_first_book
-          path: my-ebook/cpp_low_latency.epub # <-- Update this to your actual EPUB file path
-
-      # Optional: Upload the EPUB file as an artifact
-      - name: Upload second EPUB artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: epub_second_book
-          path: my-ebook/cpp_low_latency2.epub # <-- Update this to your actual EPUB file path
-
+          name: science_of_supplements_book
+          path: my-ebook/science_of_supplements.epub # <-- Update this to your actual EPUB file path
 
   validate-epub:
     runs-on: ubuntu-latest
@@ -43,13 +35,7 @@ jobs:
       - name: Download EPUB artifact
         uses: actions/download-artifact@v4
         with:
-          name: epub_first_book
-          path: ./epub-artifacts
-
-      - name: Download the other EPUB artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: epub_second_book
+          name: science_of_supplements_book
           path: ./epub-artifacts
 
       - name: Download epubcheck
