Update ebook metadata title and pagetitle

--- a/my-ebook/00-metadata.yaml
+++ b/my-ebook/00-metadata.yaml
@@ -1,5 +1,5 @@
-title: "C++ for Low-Latency Systems"
-pagetitle: "C++ for Low-Latency Systems"
+title: "Science of most popular supplements"
+pagetitle: "Science of most popular supplements"
 author: "Jose Ignacio Seco Sanz"
 language: "en"
 rights: "© 2025 Jose Ignacio Seco Sanz"
